service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: default
spec:
  selector:
    app: laravel-pod
  ports:
  - nodePort: 31001
    port: 80
    protocol: TCP
    targetPort: laravel-port
  type: NodePort
