ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # on minikube
kind: Ingress
metadata:
  name: laravel-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: laravel.info
    http:
      paths:
      - path: /
        backend:
          serviceName: laravel-service
          servicePort: 80
